--- a/hangman/styles.css
+++ b/hangman/styles.css
@@ -3,6 +3,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 
 	background-color: #0fa4b4;
 }
@@ -18,6 +19,7 @@ li {
 	gap: 20px;
 
 	background-color: #f4f4f4;
+	border-radius: 40px;
 }
 
 .hangman {
@@ -28,6 +30,86 @@ li {
 	display: block;
 }
 .hangman__svg--visible {
-	fill: #0fa4b4;
-	stroke: #0fa4b4;
+	fill: #000;
+	stroke: #000;
+}
+
+.puzzle {
+	padding: 40px 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+	text-align: center;
+	font-size: 1.5rem;
+	font-weight: 500;
+}
+
+.puzzle__word {
+	display: flex;
+	justify-content: center;
+	gap: 5px;
+}
+.puzzle__letter {
+	position: relative;
+	width: 40px;
+
+	border-bottom: 3px solid #000;
+
+	font-size: 2rem;
+	font-weight: 600;
+
+	overflow: hidden;
+}
+.puzzle__letter--open {
+	border-bottom: none;
+}
+
+.puzzle__letter span {
+	display: block;
+	transform: translateY(-100%);
+
+	transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.puzzle__letter--open span {
+	display: block;
+	transform: translateY(0);
+}
+
+.puzzle__hint {
+	color: #237b0d;
+}
+.puzzle__question {
+	color: #060606;
+}
+.puzzle__mistake {
+	color: #a43535;
+}
+.puzzle__counter-mistake {
+	color: #fb0505;
+}
+
+.keyboard {
+	display: flex;
+	gap: 5px;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: 40px;
+}
+.keyboard__letter {
+	width: calc(100% / 9 - 5px);
+	padding: 7px;
+	color: #f6f6f6;
+	font-size: 1rem;
+	font-weight: 600;
+	background-color: rgb(100, 136, 149);
+	border-radius: 4px;
+	cursor: pointer;
+	outline: none;
+	border: none;
+	transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.keyboard__letter:disabled {
+	background-color: rgba(128, 128, 128, 0.6);
+	pointer-events: none;
 }
