--- a/hangman/styles.css
+++ b/hangman/styles.css
@@ -102,14 +102,52 @@ li {
 	color: #f6f6f6;
 	font-size: 1rem;
 	font-weight: 600;
-	background-color: rgb(100, 136, 149);
+	background-color: rgba(100, 136, 149, 0.8);
 	border-radius: 4px;
 	cursor: pointer;
 	outline: none;
 	border: none;
 	transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.keyboard__letter:hover {
+	background-color: rgb(100, 136, 149);
+}
 .keyboard__letter:disabled {
 	background-color: rgba(128, 128, 128, 0.6);
 	pointer-events: none;
+}
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background-color: rgba(64, 63, 61, 0.8);
+
+	overflow-y: auto;
+}
+.backdrop--is-hidden {
+	opacity: 0;
+	pointer-events: none;
+	visibility: hidden;
+}
+
+.backdrop--is-hidden > modal {
+	transform: scale(0.5, 0.5);
+}
+
+.modal {
+	padding: 60px 40px;
+
+	background-color: #f6f6f6;
+	border-radius: 40px;
+
+	transform: scale(1, 1);
+	transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
